--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-bin/
-build/
-.classpath
-.project
-.settings/
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
+
+bin
